--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>標題一</h1>
+    <!-- 導覽列 -->
+    <nav id="navigation">
+    <div>
+    <a href="./index.html" class="logo">[Dartarus]</a>
+    </div>
+    <div>
+        <a href="">關於我</a>
+        <a href="">作品集</a>
+        <a href="">聯絡我</a>
+    </div>
+    <div class="social">
+        <a href=""><img src="./img/icon-github.png" alt="GitHub"></a>
+        <a href=""><img src="./img/icon-fb.png" alt="FB"></a>
+        <a href=""><img src="./img/icon-yt.png" alt="YT"></a>
+        <a href=""><img src="./img/icon-email.png" alt="E-mail"></a>
+    </nav>
 </body>
+
 </html>
