--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
 <body>
     <!-- 導覽列 -->
     <nav id="navigation">
-    <div>
-    <a href="./index.html" class="logo">[Dartarus]</a>
-    </div>
-    <div>
-        <a href="">關於我</a>
-        <a href="">作品集</a>
-        <a href="">聯絡我</a>
-    </div>
-    <div class="social">
-        <a href=""><img src="./img/icon-github.png" alt="GitHub"></a>
-        <a href=""><img src="./img/icon-fb.png" alt="FB"></a>
-        <a href=""><img src="./img/icon-yt.png" alt="YT"></a>
-        <a href=""><img src="./img/icon-email.png" alt="E-mail"></a>
+        <div>
+            <a href="./index.html" class="logo">[Dartarus]</a>
+        </div>
+        <div class="link">
+            <a href="">關於我</a>
+            <a href="">作品集</a>
+            <a href="">聯絡我</a>
+        </div>
+        <div class="social">
+            <a href=""><img src="./img/icon-github.png" alt="GitHub"></a>
+            <a href=""><img src="./img/icon-fb.png" alt="FB"></a>
+            <a href=""><img src="./img/icon-yt.png" alt="YT"></a>
+            <a href=""><img src="./img/icon-email.png" alt="E-mail"></a>
     </nav>
+
+    <!-- 橫幅 -->
+    <section id="banner">
+
+    </section>
+
+    <!-- 關於我 -->
+    <section id="about">
+        <h1 class="title">關於我</h1>
+        <h2>{Dartarus}</h2>
+        <p>一個攝影菜鳥/網頁前端設計師/平面設計師/ACG中二病患者。</p>
+        <a href="" class="button-box">關於我</a>
+    </section>
+
 </body>
 
 </html>
