--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
         <a href="" class="button-box">關於我</a>
     </section>
 
+    <!-- 作品集 -->
+    <section id="works">
+        <h1 class="title">作品集</h1>
+        <div id="work-box">
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+            <div class="wrok-box-small">
+                <img src="" alt="">
+                <span>類別</span>
+                <h2>作品名稱</h2>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
