--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <!-- 導覽列 -->
     <nav id="navigation">
         <div>
-            <a href="./index.html" class="logo">[Dartarus]</a>
+            <a href="./index.html" class="logo">{Dartarus}</a>
         </div>
+        <img src="./img/icon-menu.png" alt="選單" id="menu">
         <div class="link">
             <a href="">關於我</a>
             <a href="">作品集</a>
             <a href="">聯絡我</a>
         </div>
         <div class="social">
-            <a href=""><img src="./img/icon-github.png" alt="GitHub"></a>
-            <a href=""><img src="./img/icon-fb.png" alt="FB"></a>
-            <a href=""><img src="./img/icon-yt.png" alt="YT"></a>
-            <a href=""><img src="./img/icon-email.png" alt="E-mail"></a>
+            <a href=""><img src="./img/icon-yt.png" alt="YOUTUBE"></a>
+            <a href=""><img src="./img/icon-github.png" alt="Git Hub"></a>
+            <a href=""><img src="./img/icon-fb.png" alt="Facebook"></a>
+            <a href=""><img src="./img/icon-email.png" alt="E-Mail"></a>
+        </div>
     </nav>
-
     <!-- 橫幅 -->
     <section id="banner">
 
@@ -43,38 +44,62 @@
     <section id="works">
         <h1 class="title">作品集</h1>
         <div id="work-box">
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="wrok-box-small">
+            <div class="work-box-small">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
         </div>
+        <div class="button-div">
+            <a href="" class="button-box">作品集</a>
+        </div>
     </section>
+
+    <!-- 頁尾 -->
+    <footer>
+        <div>
+            <a href="./index.html" class="logo">{Dartarus}</a>
+        </div>
+        <div class="social">
+            <a href=""><img src="./img/icon-yt.png" alt="YOUTUBE"></a>
+            <a href=""><img src="./img/icon-github.png" alt="Git Hub"></a>
+            <a href=""><img src="./img/icon-fb.png" alt="Facebook"></a>
+            <a href=""><img src="./img/icon-email.png" alt="E-Mail"></a>
+        </div>
+        <div class="link">
+            <a href="">關於我</a>
+            <a href="">作品集</a>
+            <a href="">聯絡我</a>
+        </div>
+        <div id="copyright">
+            Copyright &copy; 2010 - 2020 {Dartarus} All rights reserved
+        </div>
+    </footer>
 
 </body>
 
