--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -27,6 +27,7 @@
             <a href=""><img src="./img/icon-email.png" alt="E-Mail"></a>
         </div>
     </nav>
+
     <!-- 橫幅 -->
     <section id="banner">
 
@@ -36,7 +37,7 @@
     <section id="about">
         <h1 class="title">關於我</h1>
         <h2>{Dartarus}</h2>
-        <p>一個攝影菜鳥/網頁前端設計師/平面設計師/ACG中二病患者。</p>
+        <p>一個菜鳥攝影/網頁前端設計師/平面設計師/ACG中二病患者。 </p>
         <a href="" class="button-box">關於我</a>
     </section>
 
@@ -97,10 +98,9 @@
             <a href="">聯絡我</a>
         </div>
         <div id="copyright">
-            Copyright &copy; 2010 - 2020 {Dartarus} All rights reserved
+            Copyright &copy; 2010 - 2020 <span class="logo-small">{Dartarus}</span> All rights reserved
         </div>
     </footer>
-
 </body>
 
 </html>
