--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <!-- AOS CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -35,42 +37,57 @@
 
     <!-- 關於我 -->
     <section id="about">
-        <h1 class="title">關於我</h1>
-        <h2>{Dartarus}</h2>
+        <h1 class="title" data-aos="slide-right" data-aos-duration="1000" data-aos-offset="300" data-aos-once="true">關於我
+        </h1>
+        <!-- data-aos 動畫 -->
+        <!-- data-aos-offset 位移:往上為正 -->
+        <!-- data-aos-duration 持續時間 毫秒 0-3000 -->
+        <!-- data-aos-easing 緩動 -->
+        <!-- data-aos-mirror 雙向 true 允許雙向 false 不允許 -->
+        <!-- data-aos-once 播放一次 true 一次 false 不限次數 -->
+        <h2 data-aos="flip-right" data-aos-offset="600" data-aos-duration="3000" data-aos-easing="ease-in-sine"
+            data-aos-mirror="false" data-aos-once="true">{Dartarus}
+        </h2>
         <p>一個菜鳥攝影/網頁前端設計師/平面設計師/ACG中二病患者。 </p>
         <a href="" class="button-box">關於我</a>
     </section>
 
     <!-- 作品集 -->
     <section id="works">
-        <h1 class="title">作品集</h1>
+        <h1 class="title" data-aos="slide-right" data-aos-duration="1000" data-aos-offset="300" data-aos-once="true">作品集
+        </h1>
         <div id="work-box">
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000"
+                data-aos-delay="500">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000"
+                data-aos-delay="1000">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
+                data-aos-delay="1500">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
+                data-aos-delay="2000">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
             </div>
-            <div class="work-box-small">
+            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
+                data-aos-delay="2500">
                 <img src="" alt="">
                 <span>類別</span>
                 <h2>作品名稱</h2>
@@ -84,7 +101,7 @@
     <!-- 頁尾 -->
     <footer>
         <div>
-            <a href="./index.html" class="logo">{Dartarus}</a>
+            <a href="./index.html" class="logo" data-aos="fade-down" data-aos-duration="1000" data-aos-once="true">{Dartarus}</a>
         </div>
         <div class="social">
             <a href=""><img src="./img/icon-yt.png" alt="YOUTUBE"></a>
@@ -101,6 +118,11 @@
             Copyright &copy; 2010 - 2020 <span class="logo-small">{Dartarus}</span> All rights reserved
         </div>
     </footer>
+    <!-- AOS CDN -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
