--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <!--  Slick CDN  -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <!-- AOS CDN -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body id="top">
     <!-- 導覽列 -->
     <nav id="navigation">
         <div>
@@ -32,7 +35,11 @@
 
     <!-- 橫幅 -->
     <section id="banner">
-
+        <img src="https://fakeimg.pl/1280x720/?retina=1&text=橫幅 1&font=noto">
+        <img src="https://fakeimg.pl/1280x720/?retina=1&text=橫幅 2&font=noto">
+        <img src="https://fakeimg.pl/1280x720/?retina=1&text=橫幅 3&font=noto">
+        <img src="https://fakeimg.pl/1280x720/?retina=1&text=橫幅 4&font=noto">
+        <img src="https://fakeimg.pl/1280x720/?retina=1&text=橫幅 5&font=noto">
     </section>
 
     <!-- 關於我 -->
@@ -52,56 +59,58 @@
         <a href="" class="button-box">關於我</a>
     </section>
 
-    <!-- 作品集 -->
-    <section id="works">
-        <h1 class="title" data-aos="slide-right" data-aos-duration="1000" data-aos-offset="300" data-aos-once="true">作品集
-        </h1>
-        <div id="work-box">
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000"
-                data-aos-delay="500">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="1000"
-                data-aos-delay="1000">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
-                data-aos-delay="1500">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
-                data-aos-delay="2000">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
-            <div class="work-box-small" data-aos="zoom-in-up" data-aos-offset="350" data-aos-duration="500"
-                data-aos-delay="2500">
-                <img src="" alt="">
-                <span>類別</span>
-                <h2>作品名稱</h2>
-            </div>
+ <!-- 作品集 -->
+ <section id="works">
+    <h1 class="title" data-aos="slide-right" data-aos-duration="1000" data-aos-offset="200" data-aos-once="true">作品集
+    </h1>
+    <div id="work-box">
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
         </div>
-        <div class="button-div">
-            <a href="" class="button-box">作品集</a>
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true" data-aos-delay="200">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
         </div>
-    </section>
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true" data-aos-delay="400">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
+        </div>
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
+        </div>
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true" data-aos-delay="200">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
+        </div>
+        <div class="work-box-small" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1000"
+            data-aos-once="true" data-aos-delay="400">
+            <img src="" alt="">
+            <span>類別</span>
+            <h2>作品名稱</h2>
+        </div>
+    </div>
+    <div class="button-div">
+        <a href="" class="button-box">作品集</a>
+    </div>
+</section>
 
     <!-- 頁尾 -->
     <footer>
         <div>
-            <a href="./index.html" class="logo" data-aos="fade-down" data-aos-duration="1000" data-aos-once="true">{Dartarus}</a>
+            <a href="./index.html" class="logo" data-aos="fade-down" data-aos-duration="1000"
+                data-aos-once="true">{Dartarus}</a>
         </div>
         <div class="social">
             <a href=""><img src="./img/icon-yt.png" alt="YOUTUBE"></a>
@@ -118,6 +127,23 @@
             Copyright &copy; 2010 - 2020 <span class="logo-small">{Dartarus}</span> All rights reserved
         </div>
     </footer>
+
+    <!-- 返回頂端按鈕 -->
+    <img src="./img/arrow.png" alt="返回頂端" id="arrow" data-gte-target="top" data-gte-offset="0">
+
+    <!-- 前往指定元素 CDN -->
+    <script src="https://kid421.github.io/Web_JavaScript_GoToElement/goToElement.js"></script>
+    <!--  jQuery CDN  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--  Slick CDN  -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+        $("#banner").slick({
+            arrows: false,
+            dots: true,
+            dotsClass: "slick-dots dots"
+        });
+    </script>
     <!-- AOS CDN -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
