--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="./contact/">聯絡我</a>
         </div>
         <div id="copyright">
-            Copyright &copy; 2010 - 2020 <span class="logo-small">{D}</span> All rights reserved
+            Copyright &copy; 2010 - 2020 <span class="logo-small">{Dartarus}</span> All rights reserved
         </div>
     </footer>
 
